add_subdirectory(simpleplot)
add_subdirectory(itemeditor  )
add_subdirectory(curvdemo1   )
add_subdirectory(animation   )
add_subdirectory(refreshtest )
add_subdirectory(radio       )
add_subdirectory(stockchart  )
add_subdirectory(sinusplot   )
add_subdirectory(tvplot      )
add_subdirectory(barchart    )
add_subdirectory(legends     )
add_subdirectory(dials       )
add_subdirectory(controls    )
add_subdirectory(rasterview  )
add_subdirectory(spectrogram )
add_subdirectory(scatterplot )
add_subdirectory(stylesheets )
add_subdirectory(cpuplot     )
add_subdirectory(bode        )
add_subdirectory(friedberg   )
add_subdirectory(distrowatch )
add_subdirectory(realtime    )
add_subdirectory(oscilloscope)
add_subdirectory(splineeditor)
add_subdirectory(sysinfo     )
